--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@storybook/addon-viewport": "^6.5.9",
+    "@tanstack/react-location": "^3.7.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +15,6 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.5",
     "react-query": "^3.39.1",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "use-onclickoutside": "^0.4.1",
